Name:           cairo-gl
Version:        0.0
License:        BSD3
License-file:   LICENSE
Copyright:      
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim (ianwookim@gmail.com)
Build-Type:     Custom
Cabal-Version:  >= 1.8
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the Cairo library with OpenGL 
Description:    
Category:       Graphics
Tested-With:    GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.1
extra-source-files: cairo-gtk2hs.h
                    SetupWrapper.hs 
                    SetupMain.hs
                    Gtk2HsSetup.hs

				
Library
        build-depends:  base >= 4 && < 5,
                        bytestring, mtl, array, EGLRaw 
        build-tools:    gtk2hsC2hs >= 0.13.5
        exposed-modules:  Graphics.Rendering.Cairo.GL
                          Graphics.Rendering.Cairo.GL.Types
        other-modules:
        extensions:     ForeignFunctionInterface
        Include-dirs: .
        x-c2hs-Header:  cairo-gtk2hs.h
        pkgconfig-depends: cairo >= 1.2.0, cairo-gl
